fix: Add missing border radiuses

--- a/client/src/components/Memberships/AddPopup/UserItem.module.scss
+++ b/client/src/components/Memberships/AddPopup/UserItem.module.scss
@@ -2,6 +2,7 @@
   .menuItem {
     background: transparent;
     border: none;
+    border-radius: 0.28571429rem;
     cursor: pointer;
     display: block;
     margin: 0;
